--- a/assets-optimization-bundling/package.json
+++ b/assets-optimization-bundling/package.json
@@ -35,5 +35,7 @@
     "postcss-cli": "^6.0.0",
     "stylelint-config-recommended": "^3.0.0",
     "svgo": "^1.1.1"
-  }
+  },
+  "main": "index.js",
+  "license": "MIT"
 }
